--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,11 @@
   border-radius: 25px;
   width: 21px;
   height: 20px;
-  font-size: 10px;
+  font-size: 12px;
   text-align: center;
   margin-top: 21px;
+  border: #000000;
+  padding-top: 2px;
 }
 .parent-modal {
   margin-left: 608px;
